src/z80asm/z80asm2/t/20-preproc/expected/defvars_07.txt
% z88dk-z80asm -v -dump-after-macro-expansion t/20-preproc//input/defvars_07.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
Assembling t/20-preproc/input/defvars_07.asm...
t/20-preproc/input/defvars_07.asm:3:13: error: Expected size specifier (.B, .W, .P, or .Q) after DS in DEFVARS directive
        var1 DS.
                ^
# file: t/20-preproc/input/defvars_07.asm
EndOfLine	"\n"	5:1	
symbol	__CPU_Z80__	1	(defined at <builtin>:1:1)
symbol	__CPU_ZILOG__	1	(defined at <builtin>:1:1)
symbol	__FLOAT_GENMATH__	1	(defined at <builtin>:1:1)
